<resources>
    <string name="app_name">Srcs</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calories">calories:</string>
    <string name="fats">fats:</string>
    <string name="cancel">Cancel</string>
    <string name="sort_by">Sort by</string>
    <string name="calories2">Calories</string>
    <string name="fats2">Fats</string>
    <string name="details">Details</string>
    <string name="headline">headline:</string>
    <string name="carbos">Carbos</string>
    <string name="proteins">Proteins</string>
    <string name="description">Description:</string>
</resources>
