<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.app.app.ui.recipeDetails.RecipesDetailsViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.recipeDetails.RecipeDetailsActivity">

            <ImageView
                android:id="@+id/backArrow"
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                android:src="@drawable/black_back_arrow"
                android:foreground="?android:selectableItemBackground"
                app:layout_constraintStart_toStartOf="@id/start_guideline"
                app:layout_constraintTop_toTopOf="@id/top_guideline" />

            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/end_guideline"
                app:layout_constraintStart_toStartOf="@id/start_guideline"
                app:layout_constraintTop_toTopOf="@id/top_guideline" />

            <TextView
                android:id="@+id/text2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:text="@{viewModel.recipesItemUIModel.name}"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/end_guideline"
                app:layout_constraintStart_toStartOf="@id/start_guideline"
                app:layout_constraintTop_toBottomOf="@id/text"
                tools:text="Crispy Fish Goujons" />

            <androidx.cardview.widget.CardView
                android:id="@+id/image"
                android:layout_width="0dp"
                android:layout_height="@dimen/_120sdp"
                android:layout_marginTop="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="@id/end_guideline"
                app:layout_constraintStart_toStartOf="@id/start_guideline"
                app:layout_constraintTop_toBottomOf="@id/text2">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    app:image="@{viewModel.recipesItemUIModel.image}"
                    tools:src="@tools:sample/backgrounds/scenic" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/headline"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_11sdp"
                app:layout_constraintStart_toStartOf="@id/start_guideline"
                app:layout_constraintTop_toBottomOf="@id/image" />

            <TextView
                android:id="@+id/text4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:text="@{viewModel.recipesItemUIModel.headline}"
                app:layout_constraintEnd_toEndOf="@id/end_guideline"
                app:layout_constraintStart_toEndOf="@id/text3"
                app:layout_constraintTop_toTopOf="@id/text3"
                tools:text="with Sweet Potato Wedges and Minted Snap Peas" />


            <TextView
                android:id="@+id/text5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/calories2"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_11sdp"
                app:layout_constraintStart_toStartOf="@id/start_guideline"
                app:layout_constraintTop_toBottomOf="@id/text4" />

            <TextView
                android:id="@+id/text6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:text="@{viewModel.recipesItemUIModel.calories}"
                app:layout_constraintStart_toEndOf="@id/text5"
                app:layout_constraintTop_toTopOf="@id/text5"
                tools:text="516 kcal" />

            <TextView
                android:id="@+id/text7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/fats2"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_11sdp"
                app:layout_constraintStart_toStartOf="@id/center_guideline"
                app:layout_constraintTop_toBottomOf="@id/text4" />

            <TextView
                android:id="@+id/text8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:text="@{viewModel.recipesItemUIModel.fats}"
                app:layout_constraintStart_toEndOf="@id/text7"
                app:layout_constraintTop_toTopOf="@id/text7"
                tools:text="516 kcal" />

            <TextView
                android:id="@+id/text9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/carbos"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_11sdp"
                app:layout_constraintStart_toStartOf="@id/start_guideline"
                app:layout_constraintTop_toBottomOf="@id/text5" />

            <TextView
                android:id="@+id/text10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:text="@{viewModel.recipesItemUIModel.carbos}"
                app:layout_constraintStart_toEndOf="@id/text9"
                app:layout_constraintTop_toTopOf="@id/text9"
                tools:text="47 g" />

            <TextView
                android:id="@+id/text11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/proteins"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_11sdp"
                app:layout_constraintStart_toStartOf="@id/center_guideline"
                app:layout_constraintTop_toBottomOf="@id/text5" />

            <TextView
                android:id="@+id/text12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:text="@{viewModel.recipesItemUIModel.proteins}"
                app:layout_constraintStart_toEndOf="@id/text11"
                app:layout_constraintTop_toTopOf="@id/text11"
                tools:text="43 g" />

            <TextView
                android:id="@+id/text13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/description"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_11sdp"
                app:layout_constraintStart_toStartOf="@id/start_guideline"
                app:layout_constraintTop_toBottomOf="@id/text9" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:text="@{viewModel.recipesItemUIModel.description}"
                app:layout_constraintBottom_toBottomOf="@id/bottom_guideline"
                app:layout_constraintEnd_toEndOf="@id/end_guideline"
                app:layout_constraintStart_toEndOf="@id/text13"
                app:layout_constraintTop_toTopOf="@id/text13"
                app:layout_constraintVertical_bias="0"
                tools:text="There’s nothing like the simple things in life - the smell of freshly cut grass, sitting outside on a nice sunny day, spending time with friends and family. Well here is a recipe that delivers simple culinary pleasures - some nice fresh fish with a crispy crust, crunchy potato wedges and some delightfully sweet sugar snap peas flavoured with cooling mint. Slip into something comfortable and relax into a delicious dinner!" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/top_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/start_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="20dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/end_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="20dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/center_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".5" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/bottom_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_end="16dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>