<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.app.app.ui.recipesList.RecipesListViewModel" />

        <variable
            name="adapter"
            type="com.app.app.ui.recipesList.adapter.RecipesListAdapter" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.recipesList.RecipesListFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/topBarContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintTop_toTopOf="parent">


            <SearchView
                android:id="@+id/searchView"
                android:layout_width="0dp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/rounded_white_two_corner_10"
                android:gravity="center"
                android:iconifiedByDefault="false"
                android:queryBackground="@android:color/transparent"
                android:queryHint="Search here"
                app:layout_constraintBottom_toBottomOf="@id/bottom_guideline2"
                app:layout_constraintEnd_toEndOf="@id/end_guideline2"
                app:layout_constraintStart_toStartOf="@id/start_guideline2"
                app:layout_constraintTop_toTopOf="@id/top_guideline2" />


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/top_guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="20dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/start_guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="20dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/end_guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="20dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/bottom_guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_end="20dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:text="@string/sort_by"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_11sdp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/sortRadioGroup"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toTopOf="@id/sortRadioGroup" />

        <RadioGroup
            android:id="@+id/sortRadioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintStart_toEndOf="@id/text"
            app:layout_constraintTop_toBottomOf="@id/topBarContainer">

            <RadioButton
                android:id="@+id/calories"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/calories2" />

            <RadioButton
                android:id="@+id/fats"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fats2" />
        </RadioGroup>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recipesList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:adapter="@{adapter}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sortRadioGroup"
            tools:listitem="@layout/recipe_item" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/top_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottom_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="16dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>